# rpgdieroller

./: .pre-commit-config.yaml  rpg.vim  setup.cfg  setup.py
rpgdieroller/: dierolls.py  oracles.py  shell.py  vim.py
rpgdieroller/ironsworndata/: action.csv  challenge_rank.csv  character_descriptor.csv  character_disposition.csv  character_goal.csv  character_role.csv  combat_actions.csv  elf_names.csv  giant_names.csv  ironlander_names.csv  location.csv  location_descriptor.csv  major_plot_twist.csv  mystic_backlash.csv  other_names.csv  paytheprice.csv  settlement_name_gen.csv  settlement_name_prefix.csv  settlement_name_suffix.csv  settlement_trouble.csv  theme.csv  troll_names.csv  varou_names.csv
