[metadata]
name = rpgdieroller
version = 0.1.a0
description = RPG Gaming Die Roller
long_description = file: README.rst
license = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
packages = rpgdieroller
install_requires =
    blessings
    importlib; python_version == "3.6"

[options.entry_points]
console_scripts =
    rpgdierollershell = rpgdieroller.shell:main

[options.package_data]
rpgdieroller = *.csv, */*.csv
